fixed Safari 5 nav not showing issue

--- a/css/nav.css
+++ b/css/nav.css
@@ -290,9 +290,9 @@
 	position: relative;
 	box-shadow: 0px 8px 11px -10px #333;
 }
-
+/* fix bug on Safari 5 that causes site nav wrapper to hide */
 .site-nav .no-pad-wrapper {
-	z-index: 999999;
+	-webkit-transform: translate3d(0,0,0);
 }
 
 .drop-nav {
